--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
    
 <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width,initial-scale=1">
     <div class="page"></div>
-    <h1>Alyssa Boden</h1>
-    <p>A little about me.</p>
+    <title>Alyssa Boden</title>
   </div> 
 </head>        
 
   <body>
+    <h1>Alyssa Boden</h1>
+    <h3><i>A little about me.</h3></i>
+    <hr>
+    <img src="https://via.placeholder.com/728x90.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide
+
+    C/O https://placeholder.com/"
     <header>
       <p><a href="index.html">Alyssa Boden</a></p>
 	    <nav>
