--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 
     C/O https://placeholder.com/"
     <header>
-      <p><a href="index.html">Alyssa Boden</a></p>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+          </div>
+          
 	    <nav>
 	      <ul>
           <li><a href="education.html">Education</a></li>
@@ -27,10 +33,10 @@
 		    </ul>
 	    </nav>
 	  </header>
-
+<br>
+<img src="headshot.jpg" "width="520" height="347">
 	  <footer>
-	    <p>&copy; 2020 Alyssa Boden's Resume |
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
+	    <p>&copy; 2020 Alyssa Boden's Resume 
       </p>
 	  </footer>
 
