--- a/backup.html
+++ b/backup.html
@@ -9,10 +9,10 @@
   </div> 
   <body>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-            <style>   body {background-color: rgb(54, 7, 56); color: "white";}
+            <style>   body {background-color: rgb(54, 7, 56);}
                 h1 {  color: white; text-align: center; font-family: "arial black"; }
                 h3 {  color: white; text-align: center; }
-                p {  color: white; font-family: "georgia"; }
+
                     .sidenav {
                     height: 100%;
                     width: 0;
@@ -58,12 +58,12 @@
                     <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="education.html">Education</a>
-                    <a href="professionalexperience.html">Professional Experience</a></li>
-                    <a href="skillsandinterests.html">Skills and Interests</a></li>
-		            <a href="Contact.html">Contact Me</a></li>
+                    <a href="#">Services</a>
+                    <a href="#">Clients</a>
+                    <a href="#">Contact</a>
                     </div>
 
-                    <span style="font-size:16px;cursor:pointer;color:whitesmoke;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;" onclick="openNav()">&#9776; learn more</span>
+                    <span style="font-size:16px;cursor:pointer" onclick="openNav()">&#9776; view more</span>
 
                     <script>
                     function openNav() {
@@ -78,22 +78,54 @@
     <h1>ALYSSA BODEN</h1>
     <h3><i>A little about me.</h3></i>
     <hr>
-        <p>I grew up in Pittsburgh, Pennsylvania, an avid Steelers and Penguins fan. Upon graduation from high school, I attended the University of Richmond in Virginia to study Business Administration and Political Science. From there, I moved to Nashville, TN to work in Market Research at the Country Music Association and the healthcare industry. After falling in love with research and data analysis, I wanted to get more involved with the implementation and delivery of strategic decisions identified through research. I then moved to Washington, D.C. to work at Accenture and have been there for the last five years supporting technology implementation initiatives for the federal government. At the same time I have been attending the Georgetown McDonough School of Business in pursuit of my MBA. Expected graduation is May 2020.</p>
+    <img src="https://via.placeholder.com/728x90.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide
+
+    C/O https://placeholder.com/"
     <header>
-      
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+          </div>
+          
+	    <nav>
+	      <ul>
+          <li><a href="education.html">Education</a></li>
+          <li><a href="professionalexperience.html">Professional Experience</a></li>
+          <li><a href="skillsandinterests.html">Skills and Interests</a></li>
+		      <li><a href="Contact.html">Contact Me</a></li>
+		    </ul>
+	    </nav>
 	  </header>
 <br>
 <img src="headshot.jpg" "width="520" height="347">
-      <style> img{display: block;
-        margin-left: auto;
-        margin-right: auto;
-        border: 4px solid;
-        border-color:antiquewhite;
-        }</style>
 	  <footer>
 	    <p>&copy; 2020 Alyssa Boden's Professional Website 
       </p>
-      <style> footer{color: rgba(255, 255, 255, 0.521); font-size: 6px; text-align: right;} </style>
 	  </footer>
+
+    <script type="text/javascript">
+      var myMessage = "Hello World"
+      console.log(myMessage)
+    </script>
   </body>
 </html>
+
+
+
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  
+<nav>
+  <ul>
+  <li><a href="education.html">Education</a></li>
+  <li><a href="professionalexperience.html">Professional Experience</a></li>
+  <li><a href="skillsandinterests.html">Skills and Interests</a></li>
+      <li><a href="Contact.html">Contact Me</a></li>
+    </ul>
+</nav>
