--- a/education.html
+++ b/education.html
@@ -80,21 +80,28 @@
         </script>
 
     <h1>ALYSSA BODEN</h1>
-    <h3><u>CONTACT INFORMATION</u></h3>
+    <h3><u>EDUCATION</u></h3>
     <hr>
-    <p>Email:   <a href = "mailto:alyssa.boden@gmail.com">alyssa.boden@gmail.com</a></p>
-    <p>Phone: (412) 266-0462</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/alyssaboden/">linkedin.com/in/alyssaboden</a></p>
+    <h4><u>GEORGETOWN UNIVERSITY</u></h4>
+    <p>McDonough School of Business <br>
+        Master's of Business Administration<br>
+        August 2017-May 2020
+    </p>
+    <h4><u>UNIVERSITY OF RICHMOND</u></h4>
+    <p>Robins School of Business <br>
+        Bachelor of Science in Business Administration, Marketing Concentration<br>
+        Bachelor of Arts in Political Science<br>
+
+        August 2017-May 2020
+    </p>
     <header>
       
 	  </header>
 <br>
 	  <footer>
-	    <p>&copy; 2020 Alyssa's Resume
+	    <p>&copy; 2020 Alyssa Boden's Professional Website 
       </p>
       <style> footer{color: rgba(255, 255, 255, 0.521); font-size: 7px; text-align: right;} </style>
 	  </footer>
   </body>
 </html>
-
-
