--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <style>   body {background-color: rgb(54, 7, 56); color: "white";}
                 h1 {  color: white; text-align: center; font-family: "arial black"; }
                 h3 {  color: white; text-align: center; }
+                h4 {  color: white; font-family: "arial black"; }
                 p {  color: white; font-family: "georgia"; }
                     .sidenav {
                     height: 100%;
@@ -30,7 +31,9 @@
                     padding: 8px 8px 8px 32px;
                     text-decoration: none;
                     font-size: 25px;
-                    color: #818181;
+                    font-weight: bold;
+                    color: #b983b9;
+                    font-family: arial black;
                     display: block;
                     transition: 0.3s;
                     }
@@ -57,6 +60,7 @@
 
                     <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="index.html">About Me</a>
                     <a href="education.html">Education</a>
                     <a href="professionalexperience.html">Professional Experience</a></li>
                     <a href="skillsandinterests.html">Skills and Interests</a></li>
@@ -78,6 +82,7 @@
     <h1>ALYSSA BODEN</h1>
     <h3><i>A little about me.</h3></i>
     <hr>
+    <h4><u>BACKGROUND</u></h4>
         <p>I grew up in Pittsburgh, Pennsylvania, an avid Steelers and Penguins fan. Upon graduation from high school, I attended the University of Richmond in Virginia to study Business Administration and Political Science. From there, I moved to Nashville, TN to work in Market Research at the Country Music Association and the healthcare industry. After falling in love with research and data analysis, I wanted to get more involved with the implementation and delivery of strategic decisions identified through research. I then moved to Washington, D.C. to work at Accenture and have been there for the last five years supporting technology implementation initiatives for the federal government. At the same time I have been attending the Georgetown McDonough School of Business in pursuit of my MBA. Expected graduation is May 2020.</p>
     <header>
       
@@ -93,7 +98,7 @@
 	  <footer>
 	    <p>&copy; 2020 Alyssa Boden's Professional Website 
       </p>
-      <style> footer{color: rgba(255, 255, 255, 0.521); font-size: 6px; text-align: right;} </style>
+      <style> footer{color: rgba(255, 255, 255, 0.521); font-size: 7px; text-align: right;} </style>
 	  </footer>
   </body>
 </html>
