--- a/professionalexperience.html
+++ b/professionalexperience.html
@@ -13,7 +13,10 @@
                 h1 {  color: white; text-align: center; font-family: "arial black"; }
                 h3 {  color: #b983b9; text-align: center; font-family: "arial black";}
                 h4 {  color: white; font-family: "arial black"; }
-                p {  color: white; font-family: "georgia"; }
+                h5 {  color: white; font-family: "georgia"; text-align: right; }
+                h6 {  color: white; font-family: "georgia"; font-size: 16px;}
+                p {  color: #b983b9; font-family: "georgia"; }
+                ul {color: #b983b9; font-family: "georgia"}
                     .sidenav {
                     height: 100%;
                     width: 0;
@@ -82,19 +85,32 @@
     <h1>ALYSSA BODEN</h1>
     <h3><u>PROFESSIONAL EXPERIENCE</u></h3>
     <hr>
-    <h4><u>GEORGETOWN UNIVERSITY</u></h4>
-    <p>McDonough School of Business <br>
-        Master's of Business Administration<br>
-        August 2017-May 2020
+    <h4><u>ACCENTURE</u></h4>
+    <h5>December 2018 - Present</h5>
+    <h6>Technology Consulting Manager / Associate Manager</h6>
+           <style> {h6
+            display:inline;
+            float:left;
+            }
+            h5{
+            display:inline;
+            float:right;
+            }</style>
+            
+    <p><ul>
+        <li>Provide product management support while leveraging Agile and Waterfall software development methodologies to lead 12 analysts and eight software engineers in delivering across three projects and five different technology platforms on-time and under-budget.</li>
+        <li>Drive coordination between client, customer, and system user stakeholders to resolve questions and issues regarding logistics management system. Own and facilitate system upgrades and improvements by leading product teams through ideation, iteration, and operational and infrastructure changes to simplify processes and better performance.</li>
+        <li>Won agency-sponsored innovation and design thinking “Shark Tank” challenge with an Optical Character Recognition (OCR) solution proposal for processing DOS Diplomatic Pouch and Mail. Prototyped the OCR tool with software engineers and design team while road mapping the development and implementation strategy.</li>
+    </ul>
     </p>
-    <h4><u>UNIVERSITY OF RICHMOND</u></h4>
-    <p>Robins School of Business <br>
-        Bachelor of Science in Business Administration, Marketing Concentration<br>
-        Bachelor of Arts in Political Science<br>
-
-        August 2017-May 2020
-    </p>
+         <hr>
+    <h4><u>CATALYST HEALTHCARE RESEARCH</u></h4>
+    <p>blah blah</p>
+        <hr>
+    <h4><u>COUNTRY MUSIC ASSOCIATION (CMA)</u></h4>
+    <p>blah blah</p>
     <button type="button" name="button">Download Resume</button>
+
     <header>
       
 	  </header>
