--- a/professionalexperience.html
+++ b/professionalexperience.html
@@ -97,18 +97,89 @@
             float:right;
             }</style>
             
-    <p><ul>
+    <ul>
         <li>Provide product management support while leveraging Agile and Waterfall software development methodologies to lead 12 analysts and eight software engineers in delivering across three projects and five different technology platforms on-time and under-budget.</li>
         <li>Drive coordination between client, customer, and system user stakeholders to resolve questions and issues regarding logistics management system. Own and facilitate system upgrades and improvements by leading product teams through ideation, iteration, and operational and infrastructure changes to simplify processes and better performance.</li>
         <li>Won agency-sponsored innovation and design thinking “Shark Tank” challenge with an Optical Character Recognition (OCR) solution proposal for processing DOS Diplomatic Pouch and Mail. Prototyped the OCR tool with software engineers and design team while road mapping the development and implementation strategy.</li>
     </ul>
-    </p>
+    <h5>June 2017 - December 2018</h5>
+    <h6>Technology Consultant</h6>
+           <style> {h6
+            display:inline;
+            float:left;
+            }
+            h5{
+            display:inline;
+            float:right;
+            }</style>
+
+        <ul>
+            <li>Utilized UI/UX skills to construct wireframes and design mockups for new mobile application implementation.</li>
+            <li>Identified and tracked KPIs during deployment of upgraded system and new scanner platform onsite to 16 U.S. embassies overseas through training to and feedback from more than 140 agency employees globally.</li>
+            <li>Overhauled logistics management transportation system with optimization solution that saves federal agency $4.2 million annually in shipping costs while maintaining high-level service to more than 300 overseas U.S. posts.</li>
+        </ul>  
+        <h5>January 2015 - June 2017</h5>
+        <h6>Technology Consulting Analyst / Senior Analyst</h6>
+               <style> {h6
+                display:inline;
+                float:left;
+                }
+                h5{
+                display:inline;
+                float:right;
+                }</style>  
+            <Ul>
+                <li>Led development of new PeopleSoft module by facilitating requirements gathering and prioritization, design, testing, and deploying module to domestic clients and pilot locations overseas while ensuring high product adoption rates.</li>
+                <li>Coordinated the development, implementation, and amendment of 28 standard business processes related to financial improvements and increased efficiencies for global entity.</li>
+            </Ul>
          <hr>
-    <h4><u>CATALYST HEALTHCARE RESEARCH</u></h4>
-    <p>blah blah</p>
-        <hr>
+        <h4><u>CATALYST HEALTHCARE RESEARCH</u></h4>
+            <h5>August 2014 - January 2015</h5>
+            <h6>Research Manager</h6>
+                <style> {h6
+                    display:inline;
+                    float:left;
+                    }
+                    h5{
+                    display:inline;
+                    float:right;
+                    }</style> 
+                <ul>
+                    <li>Partnered with marketing and operations team leads to apply behavioral insights and establish strategies to improve customer satisfaction and consumer engagement through data-driven decision making.</li>
+                    <li>Collaborated with cross-functional team to design and manage large-scale, multi-phase research projects for 
+                        wide range of clientele, including healthcare and government organizations.</li>
+                </ul>
+                <h5>August 2013 - August 2014</h5>
+                <h6>Research Associate</h6>
+                    <style> {h6
+                        display:inline;
+                        float:left;
+                        }
+                        h5{
+                        display:inline;
+                        float:right;
+                        }</style> 
+                 <Ul>   
+                    <li>Systemized payroll process for interns and part-time employees while managing and evaluating productivity and functions, saving company 12 hours/week in manual entry requirements.</li>
+                    <li>Combined and analyzed variables from multiple data streams and extracted valuable insights via consumer analytics to compose final client report deliverables and presentations.</li>
+                </Ul>
+
+    <hr>
     <h4><u>COUNTRY MUSIC ASSOCIATION (CMA)</u></h4>
-    <p>blah blah</p>
+        <h5>September 2012 - November 2014</h5>
+        <h6>Research Consultant</h6>
+            <style> {h6
+                display:inline;
+                float:left;
+                }
+                h5{
+                display:inline;
+                float:right;
+                }</style> 
+            <ul>
+                <li>Designed and executed thorough and comprehensive surveys aimed at defining and understanding country music consumers media habits and spending behaviors.</li>
+                <li>Analyzed primary and secondary research data through SPSS software and created valuable insights for advertisers through consumer analytics.</li>
+            </ul>
     <button type="button" name="button">Download Resume</button>
 
     <header>
