last min changes

--- a/skillsandinterests.html
+++ b/skillsandinterests.html
@@ -14,6 +14,7 @@
                 h3 {  color: #b983b9; text-align: center; font-family: "arial black";}
                 h4 {  color: white; font-family: "arial black"; }
                 p {  color: white; font-family: "georgia"; }
+                ul {color: white; font-family: "georgia"}
                     .sidenav {
                     height: 100%;
                     width: 0;
@@ -82,21 +83,12 @@
     <h1>ALYSSA BODEN</h1>
     <h3><u>SKILLS AND INTERESTS</u></h3>
     <hr>
-    <h4><u>GEORGETOWN UNIVERSITY</u></h4>
-    <p>McDonough School of Business <br>
-        Master's of Business Administration<br>
-        August 2017-May 2020
-    </p>
-    <h4><u>UNIVERSITY OF RICHMOND</u></h4>
-    <p>Robins School of Business <br>
-        Bachelor of Science in Business Administration, Marketing Concentration<br>
-        Bachelor of Arts in Political Science<br>
-
-        August 2017-May 2020
-    </p>
-    <header>
-      
-	  </header>
+        <ul>
+            <li>ICAgile Professional Certification (2019)</li>
+            <li>Advanced proficiency in Microsoft Office, Adobe Creative Suite, Oracle PeopleSoft, ServiceNow, SPSS, JIRA, and MicroStrategy platforms </li>
+            <li>Detail oriented and passionate about User Experience and Design Thinking</li>
+        </ul>
+   
 <br>
 	  <footer>
 	    <p>&copy; 2020 Alyssa Boden's Professional Website 
